<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <LinearLayout
            android:id="@+id/ingredient_header_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
            <TextView
                android:text="@string/ingredient_table_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                />

            <TextView

                android:layout_width="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/ingredient_table_quantity"/>
            <TextView
                android:id="@+id/ingredient_measure_text_view"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/ingredient_table_unit"
                />
        </LinearLayout>
        <View

            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="@color/colorAccent"/>
    </LinearLayout>