<?xml version="1.0" encoding="utf-8"?>

<!-- android:keepScreenOn="true" attribute is used to prevent screen while the video is playing -->
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:card_view="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:keepScreenOn="true">
  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
      android:id="@+id/frame_layout_for_player"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toTopOf="@+id/horizontalHalf"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">
      <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"/>
      <ImageView
        android:id="@+id/no_video_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/video_unavailable"
        android:contentDescription="@string/recipe_step_detail_video_unavailable"
        android:scaleType="fitCenter"
        android:visibility="gone"/>
    </FrameLayout>


    <android.support.constraint.Guideline
      android:id="@+id/horizontalHalf"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.4"/>


    <android.support.v7.widget.CardView
      android:id="@+id/card_view_for_exoplayer"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="16dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintBottom_toTopOf="@+id/previous_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/frame_layout_for_player"
      card_view:cardCornerRadius="4dp"
      card_view:cardElevation="4dp">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="8dp"
          android:paddingStart="16dp"
          android:paddingEnd="16dp"
          android:text="@string/thumbnail_text_view"
          android:textSize="20sp"/>
        <ImageView
          android:id="@+id/thumbnail_imageView"
          android:layout_width="100dp"
          android:layout_height="100dp"
          android:layout_margin="8dp"
          android:layout_gravity="center_horizontal"
          android:contentDescription="@string/recipe_step_detail_video_thumbnail_desc"
          android:scaleType="centerCrop"/>
        <TextView
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingStart="16dp"
          android:paddingEnd="16dp"
          android:text="@string/description_text_view"
          android:textSize="20sp"/>
        <TextView
          android:id="@+id/description_text_view"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="8dp"
          android:paddingBottom="16dp"
          android:paddingStart="16dp"
          android:paddingEnd="16dp"
          android:gravity="center"
          android:textSize="18sp"
          tools:text="Image Buttons for ingredients list and recipe step list Image Buttons for ingredients list and recipe step list"/>
      </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
      android:id="@+id/previous_button"
      android:layout_width="0dp"
      android:layout_height="65dp"
      android:layout_marginBottom="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="8dp"
      android:paddingTop="20dp"
      android:paddingBottom="20dp"
      android:drawablePadding="2dp"
      android:drawableStart="@drawable/ic_arrow_back_24dp"
      android:text="@string/button_previous_string"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/verticalHalf"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"/>

    <Button
      android:id="@+id/next_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="16dp"
      android:paddingTop="20dp"
      android:paddingBottom="20dp"
      android:drawableEnd="@drawable/ic_arrow_next_24dp"
      android:drawablePadding="2dp"
      android:text="@string/button_next_string"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/verticalHalf"/>

    <android.support.constraint.Guideline
      android:id="@+id/verticalHalf"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.5"/>

  </android.support.constraint.ConstraintLayout>

</ScrollView>



